--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-                    <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
+                <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
         <div class="collapse navbar-collapse" id="Navbar">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -48,7 +48,7 @@
                 </div>
              </div>   
             <div class="col-12 col-sm align-self-center">
-                <button type="submit" class="btn btn-warning">Reserve a Table</button>
+               <a href="#reserve_a_table"> <button type="submit" class="btn btn-warning">Reserve a Table</button></a>
             </div>    
         </div>
         
@@ -128,7 +128,7 @@
                            </dl>
                            <dl class="row">
                            <dt class="col-2 align-self-center"></dt>
-                           <dd class="col"><button type="submit" class="btn btn-primary">Reserve</button></dd>
+                           <dd class="col"><a id="reserve_a_table"<button type="submit" class="btn btn-primary">Reserve</button></a></dd>
                        </dl>
                     </div>           
             </div>
